# analog-attention

./: .gitignore  LICENSE  README.md  analog-attention-docs.docx  pyproject.toml
analog_attention/: __init__.py  base.py  broadcast.py  candidate.py  compose.py  output.py  pipeline.py  propagate.py  scan.py  signature.py  spatial.py  token.py  tokenizer.py
analog_attention/nec/: __init__.py  associativo.py  emocional.py  estado.py  geracao.py  nucleo.py  operador.py  projecao.py
examples/: exemplo_sala.py  nec_demo.py  prototipo_entrada.py  visualizador.html
tests/: test_basa.py  test_base.py  test_broadcast.py  test_candidate.py  test_compose.py  test_nec.py  test_pipeline.py  test_propagate.py  test_scan.py  test_signature.py  test_spatial.py  test_token.py  test_tokenizer.py
